--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,7 +3,10 @@
     {
       "path": "force-app",
       "default": true
-    }
+    },{
+      "path": "YelpDemo",
+      "default": false
+      }
   ],
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
